--- a/home/templates/home/contact.html
+++ b/home/templates/home/contact.html
@@ -13,9 +13,8 @@
     <!--Section heading-->
     <h3 class="h1-responsive font-weight-bold text-center my-2">Contact us</h3>
     <!--Section description-->
-    <p class="w-responsive mx-auto mb-1">Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within
+    <p class="w-responsive mx-auto mb-4">Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within
         a matter of hours to help you.</p>
-
     <div class="row">
 
         <!--Grid column-->
@@ -28,7 +27,7 @@
 					
 					<tr>
 						<td></td>
-						<td><button type="submit" class="btn btn-primary btn-lg form-control" >Send</button></td>
+						<td><button type="submit" class="btn btn-lg form-control text-white" style="background-color:#72bec0;" >Send</button></td>
 					</tr>
 				</table>
 			</form>
@@ -38,7 +37,7 @@
         <!--Grid column-->
 
         <!--Grid column-->
-        <div class="col-md-3 text-center">
+        <!-- <div class="col-md-3 text-center">
             <ul class="list-unstyled mb-0">
                 <li><i class="fas fa-map-marker-alt fa-2x"></i>
                     <p>San Francisco, CA 94126, USA</p>
@@ -52,7 +51,7 @@
                     <p>contact@mdbootstrap.com</p>
                 </li>
             </ul>
-        </div>
+        </div> -->
         <!--Grid column-->
 
     </div>
