--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,6 +4,14 @@
 
 {% block 'content' %}
 
+<style>
+	@media (max-width: 768px) {
+		.home-page-video{
+			width: 100%;
+		}
+	}
+</style>
+
 <div class="wrapper">
 	<div class="section section-hero section-shaped">
 	  <div class="shape shape-style-3 shape-default">
@@ -19,16 +27,16 @@
 		<span class="span-100"></span>
 	  </div>
 	  <div class="page-header">
-		<div class="container shape-container d-flex align-items-center py-lg">
+		<div class="container shape-container d-flex align-items-center pt-5 pb-2">
 		  <div class="col px-0">
 			<div class="row align-items-center justify-content-center">
 			  <div class="col-lg-6 text-center">
-				<h1 class="text-white display-1">People stories</h1>
-				<h2 class="display-4 font-weight-normal text-white">The time is right now for securing your company!</h2>
-				<div class="btn-wrapper mt-4">
-				  <a href="#" class="btn btn-warning btn-icon mt-3 mb-sm-0">
+				<h4 class="text-white display-6">Your Company Cybersecurity</h4>
+				<h4 class="display-6 font-weight-normal text-white">STARTS HERE</h4>
+				<div class="btn-wrapper mt-0">
+				  <a href="{% url 'home:contact' %}" class="btn btn-warning btn-icon mt-3 mb-sm-0">
 					<span class="btn-inner--icon"><i class="ni ni-button-play"></i></span>
-					<span class="btn-inner--text">See more</span>
+					<span class="btn-inner--text">Contact us!</span>
 				  </a>
 				</div>
 			  </div>
@@ -56,11 +64,11 @@
 				</p>
 			</div>
 			<div class="col-lg-6 text-right">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/UxfW0JlUs3o" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe class="home-page-video" width="560" height="315" src="https://www.youtube.com/embed/-m9p3ZNSW9o" title="Musanid - your security starts here" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 		</div>
 	</div>
-
+	<hr class="w-75 mt-5">
 	<div class="section features-6">
       <div class="container">
         <div class="row align-items-center">
@@ -79,12 +87,12 @@
             {% endfor %}
           </div>
           <div class="col-lg-6 col-10 mx-md-auto">
-            <img class="ml-lg-5" src="{% static 'assets/img/ill/ill.png' %}" width="100%">
+            <img class="ml-md-5" src="{% static 'assets/img/ill/topic-image.png' %}" width="90%">
           </div>
         </div>
       </div>
     </div>
-	
+	<hr class="w-75 mt-5">
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-8 mx-auto text-center">
@@ -140,25 +148,19 @@
 							</ul>
 						</li>
 						<li class="list-group-item">
-							Monitoring and management with Service Level Agreements (SLA)
+							Monitoring and Management with Service Level Agreements (SLA)
 							<ul class="small">
-								<li class="mt-2">Service reliability,  availability</li>
-								<li class="mt-2">notifications of security incidents</li>
+								<li class="mt-2">Reliable and Scalable Infrastructure</li>
+								<li class="mt-2">Notifications of Security Incidents</li>
+								<li class="mt-2">Asset Discovery and Vulnerability Assessment</li>
 							</ul>
 						</li>
-						<li class="list-group-item">
-							Online customer portal (could be linked to a demo page)
-							<ul class="small">
-								<li class="mt-2">monitoring, visibility</li>
-								<li class="mt-2">role management</li>
-								<li class="mt-2">asset discovery, VA</li>
-							</ul>
-						</li>
+						
 						<li class="list-group-item">
 							Global cybersecurity intelligence information feeds
 							<ul class="small">
 								<li class="mt-2">Up-to-date Indicators of Compromise (IOCs) Database</li>
-								<li class="mt-2">Enables active and regional threat actors detection</li>
+								<li class="mt-2">Enables active and regional threat-actors detection</li>
 							</ul>
 						</li>
 						<li class="list-group-item">
