--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@ Coded by www.creative-tim.com
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="apple-touch-icon" sizes="76x76" href="{% static 'assets/img/apple-icon.png' %}">
-  <link rel="icon" type="image/png" href="{% static 'assets/img/favicon.png' %}">
+  <link rel="icon" type="image/png" href="{% static 'assets/img/brand/green_logo.png' %}">
   <title>
     Musanid.com - {{title}}
   </title>
@@ -41,13 +41,13 @@ Coded by www.creative-tim.com
 	
 	<!-- Navbar -->
 	{% if request.get_full_path != "/" %}
-	<nav id="navbar-main" class="navbar navbar-expand-lg navbar-dark bg-primary">
+	<nav id="navbar-main" class="navbar navbar-expand-lg navbar-dark" style="background-color:#72bec0;">
 	{% else	%}
 	<nav id="navbar-main" class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light py-2">
 	{% endif %}
 		<div class="container">
 		  <a class="navbar-brand mr-lg-5" href="/">
-			<img src="{% static 'assets/img/brand/white.png' %}">
+			<img src="{% static 'assets/img/brand/musanid_logo.png' %}">
 		  </a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar_global" aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -57,7 +57,7 @@ Coded by www.creative-tim.com
 			  <div class="row">
 				<div class="col-6 collapse-brand">
 				  <a href="../../../index.html">
-					<img src="{% static 'assets/img/brand/blue.png' %}">
+					<img src="{% static 'assets/img/brand/green_logo.png' %}">
 				  </a>
 				</div>
 				<div class="col-6 collapse-close">
@@ -69,7 +69,7 @@ Coded by www.creative-tim.com
 			  </div>
 			</div>
 			<ul class="navbar-nav navbar-nav-hover align-items-lg-center">
-			  <li class="nav-item dropdown">
+			  <!-- <li class="nav-item dropdown">
 				<a href="#" class="nav-link" data-toggle="dropdown" href="#" role="button">
 				  <i class="ni ni-ui-04 d-lg-none"></i>
 				  <span class="nav-link-inner--text">Our Services</span>
@@ -105,7 +105,7 @@ Coded by www.creative-tim.com
 					</a>
 				  </div>
 				</div>
-			  </li>
+			  </li> -->
 			  <li class="nav-item dropdown">
 				<a href="#" class="nav-link" data-toggle="dropdown" href="#" role="button">
 				  <i class="ni ni-collection d-lg-none"></i>
@@ -115,9 +115,9 @@ Coded by www.creative-tim.com
 				  <a href="{% url 'home:home' %}" class="dropdown-item">Home</a>
 				  {% if not request.user.is_authenticated %}
 				  <a href="{% url 'home:login' %}" class="dropdown-item">Login</a>
-				  <a href="#" class="dropdown-item">Register</a>
+				  <!-- <a href="#" class="dropdown-item">Register</a> -->
 				  {% else %}
-				  <a href="#" class="dropdown-item">Profile</a>
+				  <!-- <a href="#" class="dropdown-item">Profile</a> -->
 				  <a href="{% url 'reports:index' %}" class="dropdown-item">Your Reports</a>
 				  <a href="{% url 'home:logout' %}" class="dropdown-item">Logout</a>
 				  {% endif %}
@@ -135,27 +135,15 @@ Coded by www.creative-tim.com
 			</ul>
 			<ul class="navbar-nav align-items-lg-center ml-lg-auto">
 			  <li class="nav-item">
-				<a class="nav-link nav-link-icon" href="https://www.facebook.com/" target="_blank" data-toggle="tooltip" title="Like us on Facebook">
-				  <i class="fa fa-facebook-square"></i>
-				  <span class="nav-link-inner--text d-lg-none">Facebook</span>
-				</a>
-			  </li>
-			  <li class="nav-item">
-				<a class="nav-link nav-link-icon" href="https://www.instagram.com/" target="_blank" data-toggle="tooltip" title="Follow us on Instagram">
-				  <i class="fa fa-instagram"></i>
-				  <span class="nav-link-inner--text d-lg-none">Instagram</span>
-				</a>
-			  </li>
-			  <li class="nav-item">
-				<a class="nav-link nav-link-icon" href="https://twitter.com/" target="_blank" data-toggle="tooltip" title="Follow us on Twitter">
+				<a class="nav-link nav-link-icon" href="https://twitter.com/Musanid_sa" target="_blank" data-toggle="tooltip" title="Follow us on Twitter">
 				  <i class="fa fa-twitter-square"></i>
 				  <span class="nav-link-inner--text d-lg-none">Twitter</span>
 				</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link nav-link-icon" href="https://github.com/" target="_blank" data-toggle="tooltip" title="Star us on Github">
-				  <i class="fa fa-github"></i>
-				  <span class="nav-link-inner--text d-lg-none">Github</span>
+				<a class="nav-link nav-link-icon" href="https://www.youtube.com/watch?v=-m9p3ZNSW9o" target="_blank" data-toggle="tooltip" title="Star us on Github">
+				  <i class="fa fa-youtube"></i>
+				  <span class="nav-link-inner--text d-lg-none">Youtube</span>
 				</a>
 			  </li>
 			  
@@ -174,22 +162,20 @@ Coded by www.creative-tim.com
       <div class="container">
         <div class="row row-grid align-items-center mb-5">
           <div class="col-lg-6">
-            <h3 class="text-primary font-weight-light mb-2">Thank you for supporting us!</h3>
+            <h3 class="text-primary font-weight-light mb-2">Thank you for visiting Musanid !</h3>
             <h4 class="mb-0 font-weight-light">Let's get in touch on any of these platforms.</h4>
           </div>
           <div class="col-lg-6 text-lg-center btn-wrapper">
-            <button target="_blank" href="https://twitter.com/" rel="nofollow" class="btn btn-icon-only btn-twitter rounded-circle" data-toggle="tooltip" data-original-title="Follow us">
+            <a target="_blank" href="https://twitter.com/Musanid_sa" rel="nofollow" class="btn btn-icon-only btn-twitter rounded-circle" data-toggle="tooltip" data-original-title="Follow us">
               <span class="btn-inner--icon"><i class="fa fa-twitter"></i></span>
-            </button>
-            <button target="_blank" href="https://www.facebook.com/" rel="nofollow" class="btn-icon-only rounded-circle btn btn-facebook" data-toggle="tooltip" data-original-title="Like us">
-              <span class="btn-inner--icon"><i class="fab fa-facebook"></i></span>
-            </button>
-            <button target="_blank" href="https://dribbble.com/" rel="nofollow" class="btn btn-icon-only btn-dribbble rounded-circle" data-toggle="tooltip" data-original-title="Follow us">
-              <span class="btn-inner--icon"><i class="fa fa-dribbble"></i></span>
-            </button>
-            <button target="_blank" href="https://github.com/" rel="nofollow" class="btn btn-icon-only btn-github rounded-circle" data-toggle="tooltip" data-original-title="Star on Github">
-              <span class="btn-inner--icon"><i class="fa fa-github"></i></span>
-            </button>
+			</a>
+
+            <a target="_blank" href="{% url 'home:contact' %}" rel="nofollow" class="btn btn-icon-only btn-dribbble rounded-circle" data-toggle="tooltip" data-original-title="Contact us">
+              <span class="btn-inner--icon"><i class="fa fa-envelope"></i></span>
+			</a>
+            <a target="_blank" href="https://www.youtube.com/watch?v=-m9p3ZNSW9o" rel="nofollow" class="btn btn-icon-only btn-youtube rounded-circle" data-toggle="tooltip" data-original-title="Subscribe with us">
+              <span class="btn-inner--icon"><i class="fa fa-youtube"></i></span>
+			</a>
           </div>
         </div>
         <hr>
@@ -205,14 +191,14 @@ Coded by www.creative-tim.com
                 <a href="{% url 'home:home' %}" class="nav-link">Home</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link" target="_blank">About Us</a>
+                <a href="{% url 'home:contact' %}" class="nav-link" target="_blank">Contact Us</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a href="#" class="nav-link" target="_blank">Blog</a>
-              </li>
-              <li class="nav-item">
+              </li> -->
+              <!-- <li class="nav-item">
                 <a href="#" class="nav-link" target="_blank">License</a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
@@ -236,13 +222,13 @@ Coded by www.creative-tim.com
   <!--  Google Maps Plugin    -->
   <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
   <script src="{% static 'assets/js/argon-design-system.min.js' %}" type="text/javascript"></script>
-  <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>
+  <!-- <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script> -->
   <script>
-    window.TrackJS &&
-      TrackJS.install({
-        token: "ee6fab19c5a04ac1a32a645abde4613a",
-        application: "argon-design-system-pro"
-      });
+    // window.TrackJS &&
+    //   TrackJS.install({
+    //     token: "ee6fab19c5a04ac1a32a645abde4613a",
+    //     application: "argon-design-system-pro"
+    //   });
   </script>
 </body>
 
