Send email Formatted, Captcha added to contact

--- a/templates/base.html
+++ b/templates/base.html
@@ -141,7 +141,7 @@ Coded by www.creative-tim.com
 				</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link nav-link-icon" href="https://www.youtube.com/watch?v=-m9p3ZNSW9o" target="_blank" data-toggle="tooltip" title="Star us on Github">
+				<a class="nav-link nav-link-icon" href="https://www.youtube.com/watch?v=-m9p3ZNSW9o" target="_blank" data-toggle="tooltip" title="Subscribe with us on Youtube">
 				  <i class="fa fa-youtube"></i>
 				  <span class="nav-link-inner--text d-lg-none">Youtube</span>
 				</a>
